# pipo

./: .atom-build.json  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TODO  TODO.md  config.h.in  index.js  jsdoc.json  package.json  version.h.in
cmake/: AddInfoFiles.cmake  CopyFiles.cmake  Depend_Qt.cmake  Depend_cppunit.cmake  Depend_tidy.cmake  Dependencies.cmake  ECMQt4To5Porting.cmake  Pack.cmake  QMLTestRunner.cpp  Tools.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: DumpQuote.json  EuroNextSymbols.json  FetchAllQuotes1Y.json  FetchEuroNextSymbols.cson  FetchEuroNextSymbols.json  FetchQuote1Y.json  FetchQuotes1Y.json  FindBestQuote.cson  GenChart.cson  LinReg.cson  LinReg.json  LinRegHist.cson  QuoteRange1Y.json  SelectQuote.cson  eod_stockex_fetch.txt  hugefile.txt  proxtest.txt  proxychains_config.txt  proxyprint.txt  proxyprint2.txt  proxyrequests.txt  rename_files.js  serie_streaming.json  usagerequest.txt  voirfilms_download.json  voirfilms_episodes.json  voirfilms_season.json
node/: .jshintrc  index.js  package.json
node/examples/: rename_files.js  voirfilms_episodes.json  voirfilms_season.json
node/pipo/: Aggregate.js  DataIn.js  Duplicate.js  Null.js  PipeElement.js  Registry.js  Rename.js  StdIn.js  SubPipe.js  index.js
node/pipo/files/: ListDir.js  RenameFile.js
node/pipo/filter/: HTMLToXML.js  ReFilter.js  Replace.js  XQuery.js
node/pipo/input/: HTMLFetcher.js
node/pipo/output/: Mustache.js
node/tests/: test_Aggregate.js  test_HTMLFetcher.js  test_HTMLToXML.js  test_ListDir.js  test_PipeElement.js  test_ReFilter.js  test_Registry.js  test_RenameFile.js  test_StdIn.js  test_SubPipe.js  test_XQuery.js
pipo/: Add.js  Aggregate.js  AltPipe.js  DataIn.js  Duplicate.js  FilePipe.js  Item.js  Null.js  PipeElement.js  Registry.js  Remove.js  Rename.js  StdIn.js  StdOut.js  SubPipe.js  index.js
pipo/files/: ListDir.js
pipo/filter/: Date.js  HTMLToXML.js  NLDate.js  ReFilter.js  Replace.js  WaitFor.js  XQuery.js
pipo/input/: HTMLFetcher.js  PouchDBIn.js  YFHistory.js  YFQuote.js  YahooFinance.js
pipo/maths/: MathEval.js  MathFilter.js
pipo/output/: Mailer.js  Mustache.js  PouchDBOut.js
pipo/pipe/: AltPipe.js  FilePipe.js  SerialPipe.js
pipo/utils/: PipeInspect.js  index.js
scripts/: tern-config.js  test-watch
src/: CMakeLists.txt  DataInput.cpp  DataInput.hpp  EodDataStockExFetcher.cpp  EodDataStockExFetcher.cpp.autosave  ErrorItem.cpp  ErrorItem.hpp  InputPipe.cpp  InputPipe.hpp  Item.cpp  Item.hpp  Pipe.cpp  Pipe.hpp  PipeBuilder.cpp  PipeBuilder.hpp  PipeBuilderLexer.l  PipeBuilderParseCtx.cpp  PipeBuilderParseCtx.hpp  PipeBuilderParser.y  PipeBuilderScanner.hpp  StdioOut.cpp  StdioOut.hpp  StdoutPipe.cpp  StdoutPipe.hpp  pipo_main.cpp
src/filter/: Aggregate.cpp  Aggregate.hpp  HTMLToXML.cpp  HTMLToXML.hpp  JSExpr.cpp  JSExpr.hpp  Match.cpp  Match.hpp  Mustache.cpp  Mustache.hpp  ProxyTester.cpp  ProxyTester.hpp  Rename.cpp  Rename.hpp  SubPipe.cpp  SubPipe.hpp  XQuery.cpp  XQuery.hpp
src/input/: DataIn.cpp  DataIn.hpp  FileIn.cpp  FileIn.hpp  ManualIn.cpp  ManualIn.hpp  StdioIn.cpp  StdioIn.hpp
src/input/fetcher/: EodDataStockExFetcher.cpp  EodDataStockExFetcher.hpp  HTMLFetcher.cpp  HTMLFetcher.hpp  XQueryFetcher.cpp  XQueryFetcher.hpp  ZalmosFetcher.cpp  ZalmosFetcher.hpp
src/output/: ItemQueue.cpp  ItemQueue.hpp  MailOut.cpp  MailOut.hpp  StdioOut.cpp  StdioOut.hpp  UsagePrint.cpp  UsagePrint.hpp
src/utils/: HtmlTidy.cpp  HtmlTidy.hpp  HttpCodes.hpp  JsonUtils.cpp  JsonUtils.hpp  SignalWaiter.cpp  SignalWaiter.hpp
test/: Helpers.js  should-ext.js  test_Add.js  test_Aggregate.js  test_AltPipe.js  test_DataIn.js  test_Date.js  test_Duplicate.js  test_FilePipe.js  test_Generic.js  test_HTMLFetcher.js  test_HTMLToXML.js  test_ListDir.js  test_MathEval.js  test_MathFilter.js  test_Mustache.js  test_NLDate.js  test_Null.js  test_PipeElement.js  test_PipeInspect.js  test_PouchDB.js  test_ReFilter.js  test_Registry.js  test_Remove.js  test_Rename.js  test_RenameFile.js  test_Replace.js  test_SerialPipe.js  test_StdIn.js  test_StdOut.js  test_SubPipe.js  test_WaitFor.js  test_XQuery.js  test_YahooFinance.js  test_init.js  test_pipo.js
tests/: CMakeLists.txt  qt_runner.cpp  qt_runner.hpp  stub_HTTPServer.cpp  stub_HTTPServer.hpp  test_Add.js  test_Aggregate.cpp  test_Aggregate.js  test_AltPipe.js  test_DataIn.js  test_Date.js  test_Duplicate.js  test_FilePipe.js  test_Generic.js  test_HTMLFetcher.cpp  test_HTMLToXML.cpp  test_HTMLToXML.js  test_JSExpr.cpp  test_ListDir.js  test_MailOut.cpp  test_Match.cpp  test_MathEval.js  test_Mustache.cpp  test_Mustache.js  test_NLDate.js  test_PipeBuilderParser.cpp  test_PipeBuilderScanner.cpp  test_PipeInspect.js  test_PouchDB.js  test_ProxyTester.cpp  test_Remove.js  test_Rename.cpp  test_Rename.js  test_Replace.js  test_StdIn.js  test_SubPipe.cpp  test_SubPipe.js  test_XQuery.cpp  test_XQueryFetcher.cpp  test_YahooFinance.js  (+7 more)
